add task 1 and task 2

--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Final Project</title>
+    <title>Final Project - Angelique Simon</title>
+    <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
-    
+  <!-- Navigation Bar -->
+  <nav>
+    <div id="home">
+      <div class="profile_name">
+        <!-- Adding my name, email and phone number -->
+        Angélique Simon
+        <div class="contact_info">
+          <img src="html_finalprojimages/envelope.png" alt="httpsicons8comicon/124377/circled-envelope"/>
+          contact@inta11ysolutions.org
+        </div>
+        <div style="clear:both;"></div>
+        <div class="contact_info">
+          <img src="html_finalprojimages/phone.png" alt="https://iconcomicon/124377/circled-envelope"/>
+          +336 210 883 20
+        </div>
+      </div>
+      <div class="topdiv">
+        <a class="topmenu" href="#about-me">About Me</a>
+        <!-- Add the links for Skills, Projects and Recommendation here -->
+        <a href="#skills" class="topmenu">Skills</a>
+        <a href="#projects" class="topmenu">Projects</a>
+        <a href="#recommendations" class="topmenu">Recommendations</a>
+      </div>
+    </div>    
+  </nav>
+
+
+<script src="./script.js"></script>
 </body>
-</html>
+</html>   
