--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
     </div>    
   </nav>
 
+  <!-- About Me -->
+  <section id="about-me" class="container">
+    <div>
+      <img src="./html_finalprojimages/portrait.jpg" class="profile_image"/>
+    </div>
+    <div class="about--me">
+      <h1>Hi, I'm Angelique Simon! <img src="html_finalprojimages/waving-hand.png" width="60px"/></h1>
+        <p>
+          I am a web integrator with 5 years of experience and an accessibility auditor for 2 years. I have worked on music streaming applications (digster), integration and animations on gaming applications (carrefour operation Christmas), dating application. I recently created a small site to translate first names into French sign language, carried out the integration of a POC app for France travail, on the accessibility audit side I was able to carry out some on sites and applications (babilou, Convertigo, la web conf, mes solutions family).
+        </p>
+    </div>
+  </section>
+
+
 
 <script src="./script.js"></script>
 </body>
