--- a/index.html
+++ b/index.html
@@ -46,7 +46,65 @@
     </div>
   </section>
 
+  <!-- Skills -->
+  <section id="skills">
+    <h2>Skills</h2>
+    <div style="clear:both;"></div>
 
+    <div class="all_skills">
+      <div class="skill">
+        <img src="./html_finalprojimages/html5.png"/>
+        <h6>HTML</h6>
+        <p>5 years experience</p>
+      </div>
+
+      <div class="skill">
+        <img src="./html_finalprojimages/CSS3.png"/>
+        <h6>CSS</h6>
+        <p>7 years experience</p>
+      </div> 
+
+      <!-- Add more skills here -->
+
+      <div class="skill">
+        <img src="html_finalprojimages/js.jpeg"/>
+        <h6>JavaScript</h6>
+        <p>5 years experience</p>
+      </div> 
+
+      <div class="skill">
+        <img src="./html_finalprojimages/logo_sass-6.png"/>
+        <h6>Sass</h6>
+        <p>5 years experience</p>
+      </div>
+
+      <div class="skill">
+        <img src="./html_finalprojimages/jquery.webp"/>
+        <h6>jquery</h6>
+        <p>3 years experience</p>
+      </div>
+
+      <div class="skill">
+        <img src="./html_finalprojimages/react.png"/>
+        <h6>React</h6>
+        <p>1 years experience</p>
+      </div>
+
+      <div class="skill">
+        <img src="./html_finalprojimages/react-native-1.svg"/>
+        <h6>React-Native</h6>
+        <p>1 years experience</p>
+      </div>
+
+      <div class="skill">
+        <img src="./html_finalprojimages/png-clipart-computer-icons-pro-git-github-logo-text-logo-thumbnail.png"/>
+        <h6>Git</h6>
+        <p>5 years experience</p>
+      </div>
+    </div>
+  </section>
+
+  
 
 <script src="./script.js"></script>
 </body>
