--- a/index.html
+++ b/index.html
@@ -104,6 +104,50 @@
     </div>
   </section>
 
+  <!-- Projects -->
+  <section class="projects" id="projects">
+    <h2>Projects</h2>
+    <div style="clear:both;"></div>
+
+    <div id="projects-container" class="projects-container">
+
+      <div class="project-card">
+        <h3>Simple Interest Calculator</h3>
+        <ul>
+          <li>Simple interest calculator, made in HTML, CSS and JavaScript</li>
+        </ul>
+      </div>
+
+      <hr>
+
+      <div class="project-card">
+        <h3>LSF first name generator site</h3>
+        <ul>
+          <li>Created using HTML, SASS, and JavaScript, this generator translates your first name into French Sign Language. It displays each signed image of the letters corresponding to your first name.</li>
+        </ul>
+      </div>
+
+      <hr>
+
+      <div class="project-card">
+        <h3>Digital accessibility Audit</h3>
+        <ul>
+          <li>Carrying out a digital accessibility audit using the RGAA and WCAG rules for (Babilou, My Family solutions, DINUM Web conf, Convertigo application), with explanatory document and corrections to be made.</li>
+        </ul>
+      </div>
+
+      <hr>
+
+      <div class="project-card">
+        <h3>Accessibility Barometer</h3>
+        <ul>
+          <li>Integration of the "Accessibility Barometer" website. Website created using WordPress, with integration using Gulp, Sass, JQuery, and PHP.</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  
+  <div style="clear:both;"></div>
   
 
 <script src="./script.js"></script>
