--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
     <div style="clear:both;"></div>
 
     <div id="projects-container" class="projects-container">
+      <!-- Add more projects here -->
 
       <div class="project-card">
         <h3>Simple Interest Calculator</h3>
@@ -146,9 +147,36 @@
       </div>
     </div>
   </section>
-  
+
   <div style="clear:both;"></div>
   
+  <!-- Recommendations -->
+  <section id="recommendations">
+    <h2>Recommendations</h2>
+
+    <div style="clear:both;"></div>
+
+    <div class="all_recommendations" id="all_recommendations">
+      <div class="recommendation">
+        <span>&#8220;</span>
+        I highly recommend Angelique for her expertise in web integration. Her attention to detail and problem-solving skills make her a valuable asset to our team.
+        <span>&#8221;</span>
+      </div>
+      <div class="recommendation">
+        <span>&#8220;</span>
+        Angelique conducted an exceptional accessibility audit for our website. Her in-depth knowledge of standards and methodical approach helped identify crucial improvements. Thanks to her clear recommendations, our website is now more inclusive and user-friendly for all users.
+        <span>&#8221;</span>
+      </div>
+      <div class="recommendation">
+        <span>&#8220;</span>
+        Angélique was an exceptional web integrator. Her work is always meticulous, fast, and of high quality. She fully understands our needs and knows how to translate them into effective solutions. A true professional, I highly recommend her!
+        <span>&#8221;</span>
+      </div>
+    </div>
+  </section>
+
+
+
 
 <script src="./script.js"></script>
 </body>
