--- a/index.html
+++ b/index.html
@@ -205,8 +205,14 @@
             stroke-linejoin="round"
             d="M15 11.25l-3-3m0 0l-3 3m3-3v7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
           />
-        </svg>
+      </svg>
     </a>
+  </div>
+
+  <div class="popup" id="popup" class="flex_center">
+    <img src="html_finalprojimages/checkmark--outline.svg" />
+    <h3>Thank you for your recommendation. Angelique S</h3>
+    <button onclick="showPopup(false)">Ok</button>
   </div>
 
 <script src="./script.js"></script>
